Transactions delete: delete multiple transactions (#36)
